# screenshooter

./: .gitignore  CMakeLists.txt  main.cpp
navbar/: Navbar.cpp  Navbar.ui  navbar.cpp  navbar.h
